versioned_docs/version-2026.1.1/professor/jhones_donizetti_mendes.mdx
---
sidebar_label: 'Jhones Donizetti Mendes'
---

import { Grid } from "@site/src/components/Grid";
import BrowserOnly from "@docusaurus/BrowserOnly";

export const data = {
  "title": "Jhones Donizetti Mendes",
  "base": "",
  "weekClasses": [
    {
      "dayName": "Segunda-Feira",
      "dayClasses": [
        {
          "subject": "Geografia II - 623",
          "size": 1,
          "teachers": [
            "Jhones Donizetti Mendes"
          ],
          "classroom": "sala_12-2",
          "students": [
            "AGO2025"
          ],
          "time": "09:25 - 10:15",
          "color": ""
        },
        {
          "subject": "Geografia I - 463",
          "size": 2,
          "teachers": [
            "Jhones Donizetti Mendes"
          ],
          "classroom": "sala_8-2",
          "students": [
            "AGO2026A"
          ],
          "time": "10:15 - 11:05",
          "color": ""
        },
        {
          "subject": "GEOGRAFIA I (534)",
          "size": 1,
          "teachers": [
            "Jhones Donizetti Mendes"
          ],
          "classroom": "a_definir",
          "students": [
            "IIW2024A-DP"
          ],
          "time": "13:10 - 14:00",
          "color": ""
        },
        {
          "subject": "Geografia I (503)",
          "size": 1,
          "teachers": [
            "Jhones Donizetti Mendes"
          ],
          "classroom": "a_definir",
          "students": [
            "COM2024-DP"
          ],
          "time": "13:10 - 14:00",
          "color": ""
        },
        {
          "subject": "GEOGRAFIA I (503)",
          "size": 1,
          "teachers": [
            "Jhones Donizetti Mendes"
          ],
          "classroom": "a_definir",
          "students": [
            "COM2024-DP"
          ],
          "time": "14:00 - 14:50",
          "color": ""
        },
        {
          "subject": "GEOGRAFIA I (534)",
          "size": 1,
          "teachers": [
            "Jhones Donizetti Mendes"
          ],
          "classroom": "a_definir",
          "students": [
            "IIW2024A-DP"
          ],
          "time": "14:00 - 14:50",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Terça-Feira",
      "dayClasses": []
    },
    {
      "dayName": "Quarta-Feira",
      "dayClasses": [
        {
          "subject": "Geografia I - 463",
          "size": 2,
          "teachers": [
            "Jhones Donizetti Mendes"
          ],
          "classroom": "sala_5-2",
          "students": [
            "AGO2026B"
          ],
          "time": "07:30 - 08:20",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Quinta-Feira",
      "dayClasses": [
        {
          "subject": "Geografia II - 1247",
          "size": 2,
          "teachers": [
            "Jhones Donizetti Mendes"
          ],
          "classroom": "laboratorio_de_informatica_a",
          "students": [
            "IIW2024A"
          ],
          "time": "07:30 - 08:20",
          "color": ""
        },
        {
          "subject": "Geografia I - 1233",
          "size": 2,
          "teachers": [
            "Jhones Donizetti Mendes"
          ],
          "classroom": "sala_9-2",
          "students": [
            "IIW2025A"
          ],
          "time": "09:25 - 10:15",
          "color": ""
        },
        {
          "subject": "Geografia II - 623",
          "size": 1,
          "teachers": [
            "Jhones Donizetti Mendes"
          ],
          "classroom": "sala_12-2",
          "students": [
            "AGO2025"
          ],
          "time": "11:05 - 11:55",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Sexta-Feira",
      "dayClasses": []
    }
  ],
  "time": [
    {
      "time": "07:30 - 08:20",
      "size": 50
    },
    {
      "time": "08:20 - 09:10",
      "size": 50
    },
    {
      "time": "09:25 - 10:15",
      "size": 50
    },
    {
      "time": "10:15 - 11:05",
      "size": 50
    },
    {
      "time": "11:05 - 11:55",
      "size": 50
    },
    {
      "time": "13:10 - 14:00",
      "size": 50
    },
    {
      "time": "14:00 - 14:50",
      "size": 50
    },
    {
      "time": "15:05 - 15:55",
      "size": 50
    },
    {
      "time": "15:55 - 16:45",
      "size": 50
    },
    {
      "time": "16:45 - 17:35",
      "size": 50
    },
    {
      "time": "19:00 - 19:50",
      "size": 50
    },
    {
      "time": "19:50 - 20:40",
      "size": 50
    },
    {
      "time": "21:00 - 21:50",
      "size": 50
    },
    {
      "time": "21:50 - 22:40",
      "size": 50
    }
  ]
}

# Jhones Donizetti Mendes

<div>
  {
    <BrowserOnly>
      {() => (
        <Grid
          title={data.title}
          weekClasses={data.weekClasses}
          time={data.time}
        />
      )}
    </BrowserOnly>
  }
</div>

